--- a/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/writing-third-section/writing-third-section.component.css
+++ b/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/writing-third-section/writing-third-section.component.css
@@ -16,3 +16,21 @@ h1 {
 
     width: 100%;
 }
+.deleteImage{
+    width: 20px;
+    margin-bottom: 20px;
+}
+.delteIconsWithStep{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+    align-items: center;
+}
+@media only screen and (max-width: 964px) {
+   
+    h1{
+        font-size: 25px;
+    }
+    
+}
