--- a/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/writing-second-section/writing-second-section.component.css
+++ b/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/writing-second-section/writing-second-section.component.css
@@ -8,6 +8,13 @@ textarea {
     resize: horizontal;
     max-width: min(60vw, 900px);
     min-width: 40vw;
+    border: 0px solid black;
+    border-radius: 2px;
+    box-shadow: 0px 0px 10px 1px rgba(63, 63, 63, 0.212);
+    background-color: rgba(0, 0, 0, 0.035);
+}
+textarea:focus{
+    outline: none;
 }
 .indexValue {
     font-size: 18px;
@@ -66,4 +73,21 @@ input:focus {
     .ingridents button {
         margin-top: 10px;
     }
+    h1{
+        font-size: 25px;
+    }
+    .lable{
+        font-size: 14px;
+    }
 }
+@media screen and (max-width:234px) {
+    :host{
+        
+      margin-left: 5px;
+    }  
+    .ingridents{
+        position: relative;
+        left:7px;
+        font-size: 14px;
+    }  
+    }
