Working on pusblish

--- a/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/parent-writing-recipe.component.html
+++ b/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/parent-writing-recipe.component.html
@@ -1,5 +1,5 @@
-<form [formGroup]="form" (ngSubmit)="submitForm($event)" *ngIf="signedIn">
-    <app-writing-top-bar [form]="form"></app-writing-top-bar>
+<form [formGroup]="form" (ngSubmit)="submitForm($event)" (keydown)="onKeydown($event)" *ngIf="signedIn">
+    <app-writing-top-bar [form]="form" [id]="id"></app-writing-top-bar>
     <app-writing-first-section
         [formGroup]="form"
         [questions]="listOfQuestioins"
