--- a/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/writing-third-section/inner-third-section/inner-third-section.component.html
+++ b/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/writing-third-section/inner-third-section/inner-third-section.component.html
@@ -23,13 +23,13 @@
                 </textarea>
             </div>
             <div class="description">
-                <div class="fomrsSection">
+                <div class="fomrsSection"  *ngIf="!fileDataUrl">
                     <label class="lable">Upload Image</label>
                     
                     <input
                         (change)="fileUploaded($event)"
                         accept="image/jpeg,image/png,image/webp"
-                        *ngIf="!fileDataUrl"
+                       
                         type="file"
                         class="fileUploader"
                     />
