--- a/src/app/components/creator-sections/writing-recipe/individual-input-form/individual-input-form.component.html
+++ b/src/app/components/creator-sections/writing-recipe/individual-input-form/individual-input-form.component.html
@@ -30,7 +30,7 @@
         </ng-template>
 
         <ng-template [ngIf]="url">
-            <div class="imagePreviewDiv">
+            <div class="imagePreviewDiv" *ngSwitchCase="'file'">
                 <img src="kitchen-trash-bin.png" *ngSwitchCase="'file'" (click)="deleteImage()" />
                 <img *ngSwitchCase="'file'" class="uploadedImage" [src]="url" />
                 <span class="uploadPercentage" *ngIf="showProgress"
