--- a/src/app/components/creator-sections/display-save-draft/display-save-draft.component.html
+++ b/src/app/components/creator-sections/display-save-draft/display-save-draft.component.html
@@ -1,7 +1,7 @@
 <div class="box">
 <span>Would you like to save changes?</span>
 <div class="buttons">
-<button (click)="shouldSave()">Yes</button>
-<button (click)="exit()">No</button>
+<button (click)="shouldSave()" [disabled]="disableButtons">Yes</button>
+<button (click)="exit()" [disabled]="disableButtons">No</button>
 </div>
 </div>
