Done with the push function just backned testing is left

--- a/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/upload-thumbnail/upload-thumbnail.component.html
+++ b/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/upload-thumbnail/upload-thumbnail.component.html
@@ -31,7 +31,8 @@
     </div> -->
     <div class="buttons">
         <button (click)="cancelPublish()" class="save">Cancel</button>
-        <button (click)="publish()" class="publish">Publish</button>
+        <button (click)="publish()" [disabled]="!url" class="publish">Publish</button>
+
     </div>
     
 </div>
