Added mobile option bar only styling is left

--- a/src/app/components/components-for-logged-in-users/account/account.component.html
+++ b/src/app/components/components-for-logged-in-users/account/account.component.html
@@ -1,6 +1,6 @@
 <div class="outerDiv" *ngIf="loggedInd">
     <app-left-options-bar class="navBar"></app-left-options-bar>
-    <app-mobile-option-bar></app-mobile-option-bar>
+    <app-mobile-option-bar class="mobileNavBar"></app-mobile-option-bar>
     <div class="contnetDiv">
       <router-outlet></router-outlet>
     </div>
