--- a/src/app/components/components-for-logged-in-users/account/mobile-option-bar/mobile-option-bar.component.html
+++ b/src/app/components/components-for-logged-in-users/account/mobile-option-bar/mobile-option-bar.component.html
@@ -1,1 +1,2 @@
-<p>mobile-option-bar works!</p>
+<img src="options.png" (click)="toogleDisplayState(true)">
+<app-mobile-nav-bar-links *ngIf="shouldNavComponentDispaly" (toogleState)="toogleDisplayState($event)"></app-mobile-nav-bar-links>
