--- a/src/app/components/components-for-logged-in-users/account/account.component.css
+++ b/src/app/components/components-for-logged-in-users/account/account.component.css
@@ -1,6 +1,6 @@
 .outerDiv{
     border: 2px solid black;
-    width: 80vw;
+    width: min(1500px,80vw);
     display: grid;
     grid-template-columns: max-content 1fr;
     grid-template-rows: 1;
@@ -13,8 +13,20 @@
     display: block;
    
 }
+.mobileNavBar{
+    display: none;
+}
 @media only screen and (max-width:458px) {
     .navBar{
         display: none;
     }
+    .outerDiv{
+        margin-top: 50px;
+        width: 90%;
+    }
+    .mobileNavBar{
+        display: block;
+
+    }
+    
 }
