--- a/src/app/components/creator-sections/session-expired/session-expired.component.css
+++ b/src/app/components/creator-sections/session-expired/session-expired.component.css
@@ -13,6 +13,7 @@ span {
     justify-content: space-around;
     align-items: center;
     position: fixed;
+    z-index: 3;
     top: 0px;
     bottom: 0px;
     left: 0px;
