--- a/src/app/components/components-for-logged-in-users/published-recipe/published-recipe.component.css
+++ b/src/app/components/components-for-logged-in-users/published-recipe/published-recipe.component.css
@@ -1,19 +1,37 @@
-.gridItems{
-    width: 100%;
-    outline: 2px solid rgb(207, 90, 90);
-    display: grid;
-    grid-template-columns: repeat(5,1fr);
-}
-.itmes{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: max-content;
-}
-img{
-    width: 200px;
-}
-:host{
+.outerDiv{
+   
+    padding: 5px 5px 15px 5px;
     display: block;
-    width: 100%;
+    width: 300px;
+    height:max-content;
+    background-color: white;
+    box-shadow: 0px 0px 8px 2px  rgb(177, 176, 176);
+    border-radius: 5px;
+}
+.imageOfDish{
+    width: 300px;
+    height: 200px;
+    border-radius: 5px;
+    object-fit: fill;
+}
+.itemName{
+    display: block;
+    font-size: 22px;
+    font-weight: 600;
+}
+.gridItems{
+    padding: 15px;
+    display: grid;
+    gap: 26px 16px;
+    justify-content: start;
+    grid-template-columns: repeat(4,max-content);
+    grid-auto-rows: max-content;
+   
+}
+@media only screen and (max-width:1820px) {
+    .gridItems{grid-template-columns: repeat(3,max-content);
+        
+}
+
+
 }
