--- a/src/app/components/components-for-logged-in-users/saved-recipe/saved-recipe.component.html
+++ b/src/app/components/components-for-logged-in-users/saved-recipe/saved-recipe.component.html
@@ -1,7 +1,7 @@
 <div class="gridItems" *ngIf="!loading">
-    <div *ngFor="let dat of data" class="itmes">
+    <div *ngFor="let dat of data" class="outerDiv">
         <img src="{{dat.thumbnail}}" (click)="nav(dat.id)" class="imageOfDish">
-        <span>{{dat.name}}</span>
+        <span class="itemName">{{dat.name}}</span>
         <button (click)="deleteSaved(dat.id)">Remove</button>
     </div>
     </div>
