--- a/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/upload-thumbnail/upload-thumbnail.component.html
+++ b/src/app/components/creator-sections/writing-recipe/parent-writing-recipe/upload-thumbnail/upload-thumbnail.component.html
@@ -33,5 +33,8 @@
         <button (click)="publish()" [disabled]="!url" class="publish">Publish</button>
 
     </div>
+    <div class="buttons">
+      <button (click)="cancelShowPopup()" class="save">Cancel</button>
+    </div>
     
 </div>
