--- a/src/app/components/components-for-logged-in-users/profile/delete-account-confirmation/delete-account-confirmation.component.html
+++ b/src/app/components/components-for-logged-in-users/profile/delete-account-confirmation/delete-account-confirmation.component.html
@@ -1,7 +1,7 @@
 <div>
     <span>Are you sure you want to delete the account?</span>
-    <div>
-        <button (click)="delete()">Yes</button>
-        <button (click)="cancelDelete()">No</button>
+    <div class="buttons">
+        <button (click)="delete()" class="redClass">Yes</button>
+        <button (click)="cancelDelete()" class="orange">No</button>
     </div>
 </div>
