--- a/src/app/components/components-for-logged-in-users/account/account.component.css
+++ b/src/app/components/components-for-logged-in-users/account/account.component.css
@@ -30,3 +30,16 @@
     }
     
 }
+@media only screen and (max-width:318px){
+    .outerDiv{
+        padding: 0px;
+        justify-items: start;
+        margin: 30px 0px;
+    }
+    .contnetDiv{
+        width: 100%;
+       padding: 0px;
+       margin: 0px;
+       
+    }
+  }
