--- a/src/app/components/components-for-logged-in-users/liked-recipe/liked-recipe.component.html
+++ b/src/app/components/components-for-logged-in-users/liked-recipe/liked-recipe.component.html
@@ -1,9 +1,8 @@
 <div class="gridItems" *ngIf="!loading">
-<div *ngFor="let dat of data" class="itmes">
+<div *ngFor="let dat of data" class="outerDiv">
     <img src="{{dat.thumbnail}}" (click)="nav(dat.id)" class="imageOfDish">
-    <span>{{dat.name}}</span>
-    <button (click)="deleteLiked(dat.id)">Remove</button>
+    <span class="itemName">{{dat.name}}</span>
+    <button (click)="deleteLiked(dat.id)" class="redClass">Remove</button>
 </div>
 </div>
 <app-loading-prifle-cards *ngIf="loading" [url]="'/account/liked'" [inWhichServiceToAddData]="loadingItemService" [loadingService]="loadingItemService"></app-loading-prifle-cards>
-<!-- <app-loading-cards [url]="'/account/liked'" [inWhichServiceToAddData]="loadingItemService"></app-loading-cards> -->
