--- a/src/app/components/components-for-logged-in-users/published-recipe/published-recipe.component.html
+++ b/src/app/components/components-for-logged-in-users/published-recipe/published-recipe.component.html
@@ -2,9 +2,9 @@
     <div *ngFor="let dat of data" class="outerDiv">
         <img src="deafultRecipe.png" id="defualtImage" *ngIf="!dat.thumbnail">
         <img src="{{dat.thumbnail}}" *ngIf="dat.thumbnail" (click)="nav(dat.id)" class="imageOfDish">
-        <span>{{dat.name}}</span>
+        <span class="itemName">{{dat.name}}</span>
         <div class="buttons">
-          <button (click)="deletePublished(dat.id)">Delete</button>
+          <button (click)="deletePublished(dat.id)" class="redClass">Delete</button>
         
         </div>
     </div>
