--- a/src/app/components/explore/explore.component.css
+++ b/src/app/components/explore/explore.component.css
@@ -14,6 +14,10 @@
     position: fixed;
     bottom: 0px;
 }
+img{
+    width: 100px;
+    height: 100px;
+}
 @media only screen and (max-width:684px) {
     .sidebar{
         display: none;
