--- a/src/app/components/explore/recipe-card/recipe-card.component.css
+++ b/src/app/components/explore/recipe-card/recipe-card.component.css
@@ -8,11 +8,18 @@
     box-shadow: 0px 0px 8px 2px  rgb(177, 176, 176);
     border-radius: 5px;
 }
-.imageOfDish{
-    width: 300px;
-    height: 200px;
-    border-radius: 5px;
-    object-fit: fill;
+.imageOfDishes{
+    display: block;
+    width: 99%;
+    height:200px;
+    overflow: hidden;
+    margin: auto;
+    position: relative;
+}
+img{
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
 .itemName{
     display: block;
@@ -25,11 +32,7 @@
     align-items: center;
     font-weight: 550;
 }
-.priceOfItem img{
-    transform: rotate(270deg);
-    width: 20px;
-    margin-left: 2px;
-}
+
 .infoPortion{
     padding-left: 3px;
     display: flex;
@@ -37,6 +40,7 @@
     justify-content: space-evenly;
     align-items: start;
 }
+
 :host{
     padding: 15px;
     display: grid;
@@ -56,8 +60,9 @@
     aspect-ratio: 1;
 }
 .imageOfDish{
-    width: 100%;
-    aspect-ratio: 1;
+    display: block;
+    width: 200px;
+    height:200px;
 }
 }
 @media only screen and (max-width:1380px) {
@@ -81,8 +86,9 @@
         
     }
     .imageOfDish{
-        width: 100%;
-        aspect-ratio:1;
+        display: block;
+        width: 200px;
+        height:200px;
     }
 }
 @media only screen and (max-width:684px) {
