--- a/src/app/components/details-about-articles/procedure-component/procedure-component.component.html
+++ b/src/app/components/details-about-articles/procedure-component/procedure-component.component.html
@@ -3,6 +3,6 @@
 <span class="nameHeading">{{step.name}}</span>
 <p>{{step.description}}</p>
 <div class="imageSection" *ngIf="step.image_url">
-    <img  [ngSrc]="step.image_url" fill placeholder>
+    <img  [ngSrc]="step.image_url" priority fill placeholder>
 </div>
 </div>
